--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.4",
         "axios": "^0.21.1",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.12",
@@ -19,8 +20,10 @@
         "laravel-mix": "^6.0.11",
         "lodash": "^4.17.19",
         "popper.js": "^1.12.9",
+        "postcss": "^8.2.6",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "tailwindcss": "^2.0.3"
     }
 }
